fix: fixed wrapped style

--- a/src/components/wrapper.module.scss
+++ b/src/components/wrapper.module.scss
@@ -1,14 +1,19 @@
-.wrapper{
-    padding-left: 50px;
-    padding-right: 50px;
+.wrapperContainer{
+    // padding-left: 50px;
+    // padding-right: 50px;
     margin-top: 120px;
     display:flex;
     justify-content: center;
+    
+    .wrapper{
+        max-width: 1280px;
+        // width: 100%;
+    }
 }
 
 
 @media (max-width: 900px) {
-    .wrapper{
+    .wrapperContainer{
         padding: 10px;
     }
 }
